Update 1.Setting up of Hadoop Cluster for A Standalone System.md

--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -2,8 +2,17 @@
 
 ### Prerequisites
 - **Update System:** Ensure your system is up-to-date.
+  ```
+  sudo apt update
+  ```
 - **Java Installation:** Java must be installed.
+  ```
+  sudo apt install openjdk-8-jdk -y
+  ```
 - **Secure Shell Setup:** Install Secure Shell (SSH) client and server.
+  ```
+  sudo apt install openssh-server openssh-client -y
+  ```
 - **Create Hadoop User Group:** Create a Hadoop user group with sudo privileges.
 
 ### Installation Steps
