Update 1.Setting up of Hadoop Cluster for A Standalone System.md

--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -4,16 +4,67 @@
 - **Update System:** Ensure your system is up-to-date.
   ```
   sudo apt update
-  ```  
-- **Java Installation:** Java must be installed.
+  ```
+  This will make sure that your system remains up-to-date.
+  
+- **Java Installation:** Java must be installed if it's not intstalled, install it using below commands.
   ```
   sudo apt install openjdk-8-jdk -y
   ```
+  
+- **Check the version using below commands** 
+  ```
+  java -version; javac -version
+  ```
+  
 - **Secure Shell Setup:** Install Secure Shell (SSH) client and server.
   ```
   sudo apt install openssh-server openssh-client -y
   ```
+  It will install all the dependencies
+  
 - **Create Hadoop User Group:** Create a Hadoop user group with sudo privileges.
+```
+sudo adduser {your_user}
+```
+change {your_name} to the any name you like. This will create a new user with the given name.
+Fill all the information and remember the password you will give as it will the opening password for you added user shell.
+
+- **Secure Shell Setup:** Now you switch the user from your primary interface to the interface you added.
+ This will ensure that hadoop is using the given interface without any disturbance.
+ By typing the below command in the terminal and entering the password for the shell
+  ```
+  su - {your_user}
+  ```
+  or directly changing from the start button by clicking on switch user.
+  **If your user don't have sudouers priveleges:**
+    - **Boot into Single-User Mode (Recovery Mode):**
+        -Reboot the machine.
+        -When the GRUB menu appears, select the "Advanced options for Ubuntu" and then choose the recovery mode for             the latest kernel.
+        -Once in recovery mode, select the "Root Drop to root shell prompt" option.
+    -**Remount File System as Read/Write:**
+      ```bash
+          mount -o remount,rw /
+      ```
+    -**Add User to sudo Group:**
+      ```bash
+        usermod -aG sudo hdoop_imamul
+      ```
+    -**Verify Changes:**
+      ```bash
+        id hdoop_imamul
+      ```
+        in my case it was hdoop_imamul for your it will be name of the user you created above in {your_user}.
+    -**Exit Recovery Mode:**
+      ```bash
+        exit
+      ```
+    -**Reboot:**
+      ```bash
+        reboot
+      ```
+After the reboot, the changes should take effect, and the user "hdoop_imamul" in your case "{your_user}" should have sudo privileges.
+  
 
 ### Installation Steps
 1. **Generate SSH Key Pairs:**
@@ -26,6 +77,11 @@
     cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
     ```
 
+3. **Set Proper Permission:**
+    ```bash
+    chmod 0600 ~/.ssh/authorized_keys
+    ```
+    
 3. **Verify SSH Authentication:**
     ```bash
     ssh localhost
@@ -35,11 +91,13 @@
     ```bash
     wget https://dlcdn.apache.org/hadoop/common/hadoop-3.3.6/hadoop-3.3.6.tar.gz
     ```
+    or directly going to the apache hadoop page and download the hadoop archive file.
 
 5. **Extract Hadoop:**
     ```bash
     tar xzf hadoop-3.3.6.tar.gz
     ```
+    you should change this version of hadoop-3.3.6.tar.gz to the version you have downloaded.    
 
 ### Configuration
 1. **Java Environment Variables:**
