Update 1.Setting up of Hadoop Cluster for A Standalone System.md

--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -112,35 +112,145 @@ After the reboot, the changes should take effect, and the user "hdoop_imamul" in
 ### Configuration
 1. **Java Environment Variables:**
     - Configure Java environment variables in `.bashrc`.
+    ```bash
+    sudo nano $HADOOP_HOME/etc/hadoop/hadoop-env.sh
+    ```
+    {your_user} should be changed to the name given by you
+    ```nano
+    #Add below lines in this file at the end  
+
+    #Hadoop Related Options
+    export HADOOP_HOME=/home/{your_user}/hadoop-3.2.3
+    export HADOOP_INSTALL=$HADOOP_HOME
+    export HADOOP_MAPRED_HOME=$HADOOP_HOME
+    export HADOOP_COMMON_HOME=$HADOOP_HOME
+    export HADOOP_HDFS_HOME=$HADOOP_HOME
+    export YARN_HOME=$HADOOP_HOME
+    export HADOOP_COMMON_LIB_NATIVE_DIR=$HADOOP_HOME/lib/native
+    export PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin
+    export HADOOP_OPTS"-Djava.library.path=$HADOOP_HOME/lib/nativ"
+    ```
     - Activate the environment variables.
+     ```bash
+     source ~/.bashrc
+     ```
 
 2. **Configure hadoop-env.sh:**
     ```bash
     sudo nano $HADOOP_HOME/etc/hadoop/hadoop-env.sh
     ```
-
+    ```nano
+    #Add below line in this file in the end
+    export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+    ```
 3. **Configure core-site.xml:**
     Edit the configuration file `core-site.xml`.
+    ```bash
+    sudo nano $HADOOP_HOME/etc/hadoop/core-site.xml
+    ```
+    {your_name} should be changed to name given by you
+    ```nano
+    #Add below lines in this file(between "<configuration>" and "<"/configuration>")
+     <property>
+        <name>hadoop.tmp.dir</name>
+        <value>/home/{your_name}/tmpdata</value>
+        <description>A base for other temporary directories.</description>
+     </property>
+     <property>
+        <name>fs.default.name</name>
+        <value>hdfs://localhost:9000</value>
+        <description>The name of the default file system></description>
+     </property>
+    ```
 
 4. **Configure hdfs-site.xml:**
     Edit the configuration file `hdfs-site.xml`.
-
-5. **Configure yarn-site.xml:**
-    Edit the configuration file `yarn-site.xml`.
-
-6. **Configure mapred-site.xml:**
+    ```bash
+    sudo nano $HADOOP_HOME/etc/hadoop/hdfs-site.xml
+    ```
+    {your_name} should be changed to name given by you
+    ```nano
+    <property>
+      <name>dfs.data.dir</name>
+      <value>/home/{your_name}/dfsdata/namenode</value>
+    </property>
+    <property>
+      <name>dfs.data.dir</name>
+      <value>/home/{your_name}/dfsdata/datanode</value>
+    </property>
+    <property>
+      <name>dfs.replication</name>
+      <value>1</value>
+    </property>
+    ```
+    
+5. **Configure mapred-site.xml:**
     Edit the configuration file `mapred-site.xml`.
+    ```bash
+    sudo nano $HADOOP_HOME/etc/hadoop/mapred-site.xml
+    ```
+    ```nano
+    #Add below lines in this file(between "<configuration>" and "<"/configuration>")
 
+    <property>
+      <name>mapreduce.framework.name</name>
+      <value>yarn</value>
+    </property>
+    ```
+
+8. **Configure yarn-site.xml:**
+    Edit the configuration file `yarn-site.xml`.
+    ```bash
+    sudo nano $HADOOP_HOME/etc/hadoop/yarn-site.xml
+    ```
+    ```nano
+    #Add below lines in this file(between "<configuration>" and "<"/configuration>")
+
+    <property>
+  <name>yarn.nodemanager.aux-services</name>
+  <value>mapreduce_shuffle</value>
+</property>
+<property>
+  <name>yarn.nodemanager.aux-services.mapreduce.shuffle.class</name>
+  <value>org.apache.hadoop.mapred.ShuffleHandler</value>
+</property>
+<property>
+  <name>yarn.resourcemanager.hostname</name>
+  <value>127.0.0.1</value>
+</property>
+<property>
+  <name>yarn.acl.enable</name>
+  <value>0</value>
+</property>
+<property>
+  <name>yarn.nodemanager.env-whitelist</name>
+  <value>JAVA_HOME,HADOOP_COMMON_HOME,HADOOP_HDFS_HOME,HADOOP_CONF_DIR,CLASSPATH_PERPEND_DISTCACHE,HADOOP_YARN_HOME,HADOOP_MAPRED_HOME</value>
+</property>
+    ```
+### Launching Hadoop
+```bash
+hdfs namenode -format
+./start-dfs.sh
+```
 ### Directory Setup
 - Make directories for HDFS, Namenode, and Datanode.
 
 ### Launching Hadoop
 1. **Start DFS (Distributed File System):**
    Start the Hadoop cluster.
-2. **Start YARN Service:**
+   ```bash
+   start-dfs.sh
+   ```
+3. **Start YARN Service:**
    Start the YARN service.
-3. **Check Installation:**
+   ```bash
+   start-yarn.sh
+   ```
+5. **Check Installation:**
    Use `jps` command to verify the installation. Ensure services like SecondaryNameNode, NodeManager, ResourceManager, NameNode, and DataNode are running.
+   ```bash
+   jps
+   ```
 
 ### Accessing Components
 - Access Namenode and Resource Manager.
