--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -207,25 +207,27 @@ After the reboot, the changes should take effect, and the user "hdoop_imamul" in
     #Add below lines in this file(between "<configuration>" and "<"/configuration>")
 
     <property>
-  <name>yarn.nodemanager.aux-services</name>
-  <value>mapreduce_shuffle</value>
-</property>
-<property>
-  <name>yarn.nodemanager.aux-services.mapreduce.shuffle.class</name>
-  <value>org.apache.hadoop.mapred.ShuffleHandler</value>
-</property>
-<property>
-  <name>yarn.resourcemanager.hostname</name>
-  <value>127.0.0.1</value>
-</property>
-<property>
-  <name>yarn.acl.enable</name>
-  <value>0</value>
-</property>
-<property>
-  <name>yarn.nodemanager.env-whitelist</name>
-  <value>JAVA_HOME,HADOOP_COMMON_HOME,HADOOP_HDFS_HOME,HADOOP_CONF_DIR,CLASSPATH_PERPEND_DISTCACHE,HADOOP_YARN_HOME,HADOOP_MAPRED_HOME</value>
-</property>
+      <name>yarn.nodemanager.aux-services</name>
+      <value>mapreduce_shuffle</value>
+    </property>
+    <property>
+      <name>yarn.nodemanager.aux-services.mapreduce.shuffle.class</name>
+      <value>org.apache.hadoop.mapred.ShuffleHandler</value>
+    </property>
+    <property>
+      <name>yarn.resourcemanager.hostname</name>
+      <value>127.0.0.1</value>
+    </property>
+    <property>
+      <name>yarn.acl.enable</name>
+      <value>0</value>
+    </property>
+    <property>
+      <name>yarn.nodemanager.env-whitelist</name>
+      <value>JAVA_HOME,HADOOP_COMMON_HOME,HADOOP_HDFS_HOME,HADOOP_CONF_DIR,CLASSPATH_PERPEND_DISTCACHE,
+              HADOOP_YARN_HOME,HADOOP_MAPRED_HOME
+      </value>
+    </property>
     ```
 ### Launching Hadoop
 ```bash
