Update 1.Setting up of Hadoop Cluster for A Standalone System.md

--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -47,29 +47,28 @@ Fill all the information and remember the password you will give as it will the 
         -Once in recovery mode, select the "Root Drop to root shell prompt" option.
       
     -**Remount File System as Read/Write:**
-        ```
+        ```bash
         mount -o remount,rw /
         ```
   
     -**Add User to sudo Group:**
-        ```
+        ```bash
         usermod -aG sudo hdoop_imamul
         ```
   
     -**Verify Changes:**
-        ```
+        ```bash
         id hdoop_imamul
         ```
-  
-        in my case it was hdoop_imamul for your it will be name of the user you created above in {your_user}.
+    in my case it was hdoop_imamul for your it will be name of the user you created above in {your_user}.
   
     -**Exit Recovery Mode:**
-        ```
+        ```bash
         exit
         ```
   
     -**Reboot:**
-        ```
+        ```bash
         reboot
         ```
   
