Update 1.Setting up of Hadoop Cluster for A Standalone System.md

--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -38,8 +38,13 @@ Fill all the information and remember the password you will give as it will the 
   ```
   
   or directly changing from the start button by clicking on switch user.
-  
   **If your user don't have sudouers priveleges:**
+  First switch to the rooot user of the system then add below command
+  ```
+  sudo adduser {your_user} sudo
+  ```
+  
+  **You can also follow below steps If your user don't have sudouers priveleges:**
   
     - **Boot into Single-User Mode (Recovery Mode):**
         -Reboot the machine.
@@ -125,9 +130,11 @@ After the reboot, the changes should take effect, and the user "hdoop_imamul" in
     export HADOOP_COMMON_HOME=$HADOOP_HOME
     export HADOOP_HDFS_HOME=$HADOOP_HOME
     export YARN_HOME=$HADOOP_HOME
-    export HADOOP_COMMON_LIB_NATIVE_DIR=$HADOOP_HOME/lib/native
     export PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin
-    export HADOOP_OPTS"-Djava.library.path=$HADOOP_HOME/lib/nativ"
+    
+    #HADOOP NATIVE PATH:
+    export HADOOP_COMMON_LIB_NATIVE_DIR=$HADOOP_HOME/lib/native
+    export HADOOP_OPTS=“-Djava.library.path=$HADOOP_HOME/lib”
     ```
     - Activate the environment variables.
      ```bash
