Update 1.Setting up of Hadoop Cluster for A Standalone System.md

--- a/1.Setting up of Hadoop Cluster for A Standalone System.md
+++ b/1.Setting up of Hadoop Cluster for A Standalone System.md
@@ -1,4 +1,4 @@
-## Setting Up Hadoop Cluster for a Standalone System
+## Setting Hadoop for a Standalone System
 
 ### Prerequisites
 - **Update System:** Ensure your system is up-to-date.
