Update 2.Setting Up Hive.md

--- a/2.Setting Up Hive.md
+++ b/2.Setting Up Hive.md
@@ -1,28 +1,28 @@
 ## Setting Up HIVE
 
 ### Prerequisites
-- **HADOOP should be downloaded and properly working
-- **Make sure that all the Daemons are running by writing the below commands
+- **HADOOP should be downloaded and properly working**
+- **Make sure that all the Daemons are running by writing the below commands**
     ```
     start-all.sh
     ```
 
 ### Downloading Hive
 - **Download hive bin file from apache hive website https://www.apache.org/dyn/closer.cgi/hive/ or 
-    download the apache-hive version 3.1.3 using below command
+    download the apache-hive version 3.1.3 using below command**
     ```
     wget https://dlcdn.apache.org/hive/hive-3.1.3/apache-hive-3.1.3-bin.tar.gz
     ```
     This will make sure that your apache-hive-3.1.3-bin.tar.gz file is installed.
 
 - **Extract apache-hive-3.1.3-bin.tar.gz using double click on the folder or by writing the 
-    following command in the terminal
+    following command in the terminal**
     ```
     tar xzf apache-hive-3.1.3-bin.tar.gz
     ```
     This will make sure that your apache-hive-3.1.3-bin.tar.gz file is extracted.
 
-- **Edit .bashrc file
+- **Edit .bashrc file**
     ```
     sudo nano ~/.bashrc
     ```
@@ -34,12 +34,12 @@
     ```
     exit and save the above file.
 
-- **Source .bashrc file
+- **Source .bashrc file**
     ```
     source ~/.bashrc
     ```
 
-- **Edit hive-config.sh file
+- **Edit hive-config.sh file**
     ```
     sudo nano $HIVE_HOME/bin/hive-config.sh
     ```
@@ -48,7 +48,7 @@
     export HADOOP_HOME=/home/hdoop_imamul/hadoop-3.3.6 # Path where you have extracted Hadoop
     ```
 
-- **Creating folders in hadoop and enabling write permission to it (comments are given in '#')
+- **Creating folders in hadoop and enabling write permission to it (comments are given in '#')**
     ```
     hdfs dfs -mkdir /tmp
     hdfs dfs -chmod g+w /tmp  #enabling writing permission
@@ -56,7 +56,7 @@
     hdfs dfs -chmod g+w /user/hive/warehouse
     ```
 
-- **Initialize Derby and hive
+- **Initialize Derby and hive**
     ```
     schematool -initSchema -dbType derby
     hive
